updated pages w/ js, added more content to Khonshu

--- a/chandra.html
+++ b/chandra.html
@@ -62,7 +62,7 @@
               connected to thoughts, emotions, and speech, earning the title
               Vachaspati (Lord of Speech).
             </p>
-            <p>Myths surround Chandra:</p>
+            <p>Myths that surround Chandra:</p>
             <div class="list-origin-chandra">
               <ul>
                 <li>
