--- a/khonshu.html
+++ b/khonshu.html
@@ -53,23 +53,211 @@
     <section class="content-chandra">
       <section>
         <div class="text-img-chandra">
-          <div class="text-chandra"></div>
-        </div>
-      </section>
-      <h3>Mythology and Origin Story</h3>
-      <p>In early stories about Khonsu, he wasn't remembered as being an all giving God. On the contrary, he was remembered as being bloodthirsty and dangerous. He would work hand-in-hand with the deceased king to capture, kill, and feed on other gods in order to take their strength for himself, being known in the Coffin Texts as "Khonshu who lives on hearts". As the New Kingdom developed, however, things took a turn in which the people considered him the "Greatest God of Gods", and associated him with being actually quite compassionate. He offered great protection for the people, their livestock, and their lands. Additionally, stories describe him to have healed the pharoah Ptolemy IV, where they say he cleansed him of evil spirits. This time period is also when his name was officially defined as to travel and to cross, referencing his travels across the night sky.</p>
-      <!-- Sources for this section:
-           https://worldhistoryedu.com/khonsu-ancient-egyptian-god-of-the-moon-and-time/
-           https://ancientegyptonline.co.uk/khonsu/ -->
-    
-    <p>
-              Chandra’s origins trace back to Vedic literature, where he is
-              praised in the Rig Veda as the essence of Soma, the sacred nectar
-              of the gods, and the nurturer of flora. Born from the mind of the
-              primordial being (as per Purusha Sukta), Chandra is intimately
-              connected to thoughts, emotions, and speech, earning the title
-              Vachaspati (Lord of Speech).
-            </p>
+          <div class="text-chandra">
+            <h3>Mythology and Origin Story</h3>
+            <p>
+              In early stories about Khonshu, he wasn't remembered as being an all giving God. On the contrary, he was remembered as being bloodthirsty and dangerous. He would work hand-in-hand with the deceased king to capture, kill, and feed on other gods in order to take their strength for himself, being known in the Coffin Texts as "Khonshu who lives on hearts". As the New Kingdom developed, however, things took a turn in which the people considered him the "Greatest God of Gods", and associated him with being actually quite compassionate. He offered great protection for the people, their livestock, and their lands. Additionally, stories describe him to have healed the pharoah Ptolemy IV, where they say he cleansed him of evil spirits. This time period is also when his name was officially defined as to travel and to cross, referencing his travels across the night sky.</p>
+      
+      <span class="bold-chandra">Sources for this section:</span>
+      <p>https://worldhistoryedu.com/khonsu-ancient-egyptian-god-of-the-moon-and-time/
+           https://ancientegyptonline.co.uk/khonsu/</p>
 
+           <p>Myths that surround Khonshu:</p>
+           <div class="list-origin-chandra">
+            <ul>
+              <li>
+                <p>
+                  <span class="bold-chandra">Birth and Power:</span> Chandra
+                    was born to sage Atri and Anusuya and given dominion over
+                    the Moon, becoming part of the Navagraha (nine celestial
+                    influencers).
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">Khonshu</span>
+                   He fell in love with Tara, the wife of Brihaspati (Jupiter),
+                    resulting in the birth of Budha (Mercury). This love
+                    triangle led to celestial tensions and added to Chandra’s
+                    mythic complexity.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">
+                    More Info:
+                  </span>
+                  Chandra married 27 daughters of Daksha, representing the
+                    lunar constellations (Nakshatras), but showed favoritism to
+                    Rohini. Cursed by Daksha for his neglect of the other wives,
+                    Chandra began to wane, giving rise to the lunar phases.
+                </p>
+              </li>
+            </ul>
+           </div>
+        </div>
+        <div class="image-chandra">
+          <img src="images/khonshu-content.jpg" alt="Khonshu">
+        </div> 
+      </div>
+    <section>
+      <div class="text-img-chandra">
+        <div>
+          <h3>Iconography and Symbols</h3>
+          <p>
+            Chandra is portrayed as a fair, youthful deity with a serene
+              expression, riding a chariot drawn by ten white horses or geese.
+              Sometimes, he’s shown seated on a lotus atop his chariot.
+          </p>
+          <p>Common symbols include:</p>
+          <div class="list-origin-chandra">
+            <ul>
+              <li>
+                <p>
+                  <span class="bold-chandra">Symbol #1:</span>
+                  Information goes here.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">Symbol #2:</span>
+                  More Information goes here.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">Symbol #3:</span>
+                  Even more information goes here.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <p>
+            In Buddhist art, particularly from the Newar tradition of Nepal,
+              Chandra is occasionally featured in mandalas, though more often as
+              a secondary figure rather than a central deity.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="text-img-chandra">
+        <div>
+          <h3>Worship and Rituals</h3>
+          <p>
+             Chandra holds spiritual importance in Vedic rituals, astrology,
+              and modern Hindu practices:
+          </p>
+          <div class="list-origin-chandra">
+            <ul>
+              <li>
+                <p>
+                  <span class="bold-chandra">Ritual #1:</span>
+                  Ritual 1 will go here.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">Ritual #2:</span>
+                  Ritual 2 will go here.
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">Worship #3:</span>
+                  Maybe worship practices.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <p>
+            He is also honored at temples like the Somnath Temple in Gujarat, where Lord Shiva wears Chandra on his matted hair as a crescent, symbolizing divine protection and renewal.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="text-img-chandra">
+        <div class="text-chandra">
+          <h3>Temples</h3>
+          <p>
+            Though not as prominently worshipped as deities like Shiva or
+              Vishnu, Chandra has sacred associations:
+          </p>
+          <div class="list-origin-chandra">
+              <ul>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Somnath Temple (Gujarat): </span>
+                    According to legend, Chandra was saved from Daksha’s curse
+                    by Shiva here, earning the deity the name Chandrashekhara
+                    (He who wears the moon).
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra"
+                      >Chandrabhaga River (Himachal Pradesh):</span
+                    >
+                    Originating from the mythical site where Chandra was split
+                    by Brahma, the river symbolizes both spiritual cleansing and
+                    the harmony of masculine and feminine forces.
+                  </p>
+                </li>
+              </ul>
+            </div>
+        </div>
+        <div class="image-chandra">
+          <img src="images/temple-of-khonshu.jpg" alt="Temple of Khonshu">
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="text-img-chandra">
+        <div>
+          <h3>Legends</h3>
+          <div class="list-origin-chandra">
+            <ul>
+              <li>
+                <p>
+                  <span class="bold-chandra">Legend #1:</span>
+                  First Legend
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">Legend #2:</span>
+                  Second Legend
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold-chandra">Legend #3:</span>
+                  Third Legend
+                </p>
+              </li>
+            </ul>
+          </div>
+          <p>
+            More content
+          </p>
+        </div>
+      </div>
+    </section>
+  </section>
+  <div class="feedback-box">
+    <div class="feedback-question">
+      <p>Did you find this information interesting?</p>
+      <button class="btn" onclick="openPopup()">Yes</button>
+      <button class="btn" onclick="openPopup()">No</button>
+    </div>
+  </div>
+  <div class="popup" id="popup">
+    <img src="images/checkmark.png" alt="checkmark">
+    <h2>Thank You for Your Feedback!</h2>
+    <button type="button" onclick="closePopup()">OK</button>
+  </div>
+
+  <script src="js/feedback.js"></script>
   </body>
 </html>
