working on khonshu

--- a/khonshu.html
+++ b/khonshu.html
@@ -59,38 +59,38 @@
               In early stories about Khonshu, he wasn't remembered as being an all giving God. On the contrary, he was remembered as being bloodthirsty and dangerous. He would work hand-in-hand with the deceased king to capture, kill, and feed on other gods in order to take their strength for himself, being known in the Coffin Texts as "Khonshu who lives on hearts". As the New Kingdom developed, however, things took a turn in which the people considered him the "Greatest God of Gods", and associated him with being actually quite compassionate. He offered great protection for the people, their livestock, and their lands. Additionally, stories describe him to have healed the pharoah Ptolemy IV, where they say he cleansed him of evil spirits. This time period is also when his name was officially defined as to travel and to cross, referencing his travels across the night sky.</p>
       
       <span class="bold-chandra">Sources for this section:</span>
-      <p>https://worldhistoryedu.com/khonsu-ancient-egyptian-god-of-the-moon-and-time/
-           https://ancientegyptonline.co.uk/khonsu/</p>
+           <div class="references">
+            <ul>
+              <li>
+                <a href="https://worldhistoryedu.com/khonsu-ancient-egyptian-god-of-the-moon-and-time/">World History</a>
+              </li>
+              <li>
+                <a href="https://ancientegyptonline.co.uk/khonsu/">Ancient Egypt Online</a>
+              </li>
+            </ul>
+           </div>
 
-           <p>Myths that surround Khonshu:</p>
+           <p class="myths">Myths that surround Khonshu:</p>
            <div class="list-origin-chandra">
             <ul>
               <li>
                 <p>
-                  <span class="bold-chandra">Birth and Power:</span> Chandra
-                    was born to sage Atri and Anusuya and given dominion over
-                    the Moon, becoming part of the Navagraha (nine celestial
-                    influencers).
+                  <span class="bold-chandra">Birth and Power:</span>
+                  Khonshu was a part of the Theban Triad with his father, Amun, and his mother Mut. In this triad, Khonshu represents youth, renewal, and lunar energy.
                 </p>
               </li>
               <li>
                 <p>
-                  <span class="bold-chandra">Khonshu</span>
-                   He fell in love with Tara, the wife of Brihaspati (Jupiter),
-                    resulting in the birth of Budha (Mercury). This love
-                    triangle led to celestial tensions and added to Chandra’s
-                    mythic complexity.
+                  <span class="bold-chandra">Healer of the Sick:</span>
+                  In one tale, Khonshu travels to Nubia to heal the daughter of the king. His successful intervention solidified his reputation as a divine healer.
                 </p>
               </li>
               <li>
                 <p>
                   <span class="bold-chandra">
-                    More Info:
+                    Timekeeper of the Gods:
                   </span>
-                  Chandra married 27 daughters of Daksha, representing the
-                    lunar constellations (Nakshatras), but showed favoritism to
-                    Rohini. Cursed by Daksha for his neglect of the other wives,
-                    Chandra began to wane, giving rise to the lunar phases.
+                  Because the moon was used to measure months, Khonshu was seen as a guardian of time, aligning religious ceremonies and agricultural activities.
                 </p>
               </li>
             </ul>
@@ -105,29 +105,27 @@
         <div>
           <h3>Iconography and Symbols</h3>
           <p>
-            Chandra is portrayed as a fair, youthful deity with a serene
-              expression, riding a chariot drawn by ten white horses or geese.
-              Sometimes, he’s shown seated on a lotus atop his chariot.
+            In ancient Egyptian mythology, Khonshu was viewed as a benevolent, youthful moon god associated with healing, time, and protection—a respected and positive deity, not a sinister figure.
           </p>
           <p>Common symbols include:</p>
           <div class="list-origin-chandra">
             <ul>
               <li>
                 <p>
-                  <span class="bold-chandra">Symbol #1:</span>
-                  Information goes here.
+                  <span class="bold-chandra">Crescent Moon and Lunar Disk:</span>
+                   The Lunar disk represents his dominion over the moon and time. This concept is one that is usually depicted above his head, either as a crescent or a full lunar disc.
                 </p>
               </li>
               <li>
                 <p>
-                  <span class="bold-chandra">Symbol #2:</span>
-                  More Information goes here.
+                  <span class="bold-chandra">Mummiform Appearance:</span>
+                  Khonshu is often shown wrapped like a mummy, which emphasizes his divine and eternal nature. This links him with themes of rebirth and protection.
                 </p>
               </li>
               <li>
                 <p>
-                  <span class="bold-chandra">Symbol #3:</span>
-                  Even more information goes here.
+                  <span class="bold-chandra">Falcon or Falcon-Headed Human:</span>
+                  Khonshu is sometimes depicted with the head of a falcon, like Horus, the god of the sky. Sky-related deities often share this iconography, reflecting control over the heavens and celestial movement
                 </p>
               </li>
             </ul>
@@ -207,7 +205,7 @@
               </ul>
             </div>
         </div>
-        <div class="image-chandra">
+        <div class="image-khonshu">
           <img src="images/temple-of-khonshu.jpg" alt="Temple of Khonshu">
         </div>
       </div>
