--- a/kuutar.html
+++ b/kuutar.html
@@ -62,7 +62,7 @@
               epic poetry, particularly the Kalevala, compiled by Elias Lonnrot
               in the 19th century from traditional oral stories.
             </p>
-            <p>Myths that surround Kuutar:</p>
+            <p class="myths">Myths that surround Kuutar:</p>
             <div class="list-origin-chandra">
               <ul>
                 <li>
@@ -77,8 +77,7 @@
                     would have been viewed as a powerful feminine force, thus
                     giving rise to Kuutar. Her weaving of golden threads is
                     symbolic of the moon's light cast on the world at night -
-                    soft, enchanting and transformative. The act of spinning and
-                    weaving also connects here to themes of fate and time.
+                    soft, enchanting and transformative.
                   </p>
                 </li>
                 <li>
@@ -94,8 +93,8 @@
                     and beautiful garments. Though they don't have a detailed
                     narrative or conflict, their presence as weavers of cosmic
                     beauty ties them to ancient Indo-European mythic themes of
-                    diveine women controlling fate, light, and nature through
-                    their spinning and weaving. The image to our right is a
+                    divine women controlling fate, light, and nature through
+                    their spinning and weaving. The image to your right is a
                     piece known as Vainamoisen soitto, showcasing Paivatar and
                     Kuutar sitting atop a rainbow looking down at Vainamoisen as
                     he plays a Kantele.
@@ -271,15 +270,17 @@
           </li>
         </ul>
       </section>
+      <div class="feedback-section">
+        <div class="feedback-box">
+          <div class="feedback-question">
+            <p>Did you find this information interesting?</p>
+            <button class="btn" onclick="openPopup()">Yes</button>
+            <button class="btn" onclick="openPopup()">No</button>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <div class="feedback-box">
-      <div class="feedback-question">
-        <p>Did you find this information interesting?</p>
-        <button class="btn" onclick="openPopup()">Yes</button>
-        <button class="btn" onclick="openPopup()">No</button>
-      </div>
-    </div>
     <div class="popup" id="popup">
       <img src="images/checkmark.png" alt="checkmark" />
       <h2>Thank You for Your Feedback!</h2>
