working on webpages

--- a/chandra.html
+++ b/chandra.html
@@ -253,7 +253,7 @@
                 </li>
               </ul>
             </div>
-            <p>
+            <p class="end">
               In Tibetan Buddhism, Chandra is found within mandalas as a
               subsidiary figure or under the feet of deities like Vajrabhairava,
               showing how his influence transcends religious boundaries.
