--- a/comparison.html
+++ b/comparison.html
@@ -135,14 +135,14 @@
           </div>
         </div>
       </section>
-    </section>
-    <div class="feedback-box">
-      <div class="feedback-question">
-        <p>Did you like this fun-facts?</p>
-        <button class="btn" onclick="openPopup()">Yes</button>
-        <button class="btn" onclick="openPopup()">No</button>
+      <div class="feedback-box">
+        <div class="feedback-question">
+          <p>Did you like these fun-facts?</p>
+          <button class="btn" onclick="openPopup()">Yes</button>
+          <button class="btn" onclick="openPopup()">No</button>
+        </div>
       </div>
-    </div>
+    </section>
     <div class="popup" id="popup">
       <img src="images/checkmark.png" alt="checkmark" />
       <h2>Thank You for Your Feedback!</h2>
