--- a/haliya.html
+++ b/haliya.html
@@ -68,9 +68,9 @@
               
             </div>
           </div>
-          <!-- <div class="image-haliya">
-            <img src="../images/haliyagoddess.jpg" alt="The Masked Moon Goddess Haliya" />
-          </div> -->
+          <div class="image-chandra">
+            <img src="images/haliya-content.jpg" alt="The Masked Moon Goddess Haliya" />
+          </div>
         </div>
       </section>
       <section class="iconsHaliya">
