--- a/khonshu.html
+++ b/khonshu.html
@@ -130,11 +130,6 @@
               </li>
             </ul>
           </div>
-          <p>
-            In Buddhist art, particularly from the Newar tradition of Nepal,
-              Chandra is occasionally featured in mandalas, though more often as
-              a secondary figure rather than a central deity.
-          </p>
         </div>
       </div>
     </section>
@@ -143,33 +138,30 @@
         <div>
           <h3>Worship and Rituals</h3>
           <p>
-             Chandra holds spiritual importance in Vedic rituals, astrology,
-              and modern Hindu practices:
+            Worship and rituals for Khonshu in ancient Egypt were focused on honoring his power over the moon, time, protection, and healing. He was not one of the most widespread deities, but he held an important and respected place, especially in Thebes, where his cult thrived.
           </p>
           <div class="list-origin-chandra">
             <ul>
               <li>
                 <p>
-                  <span class="bold-chandra">Ritual #1:</span>
-                  Ritual 1 will go here.
+                  <span class="bold-chandra">Lunar Fesitvals:</span>
+                  Celebrations were aligned with lunar phases, especially the new and full moons. Rituals emphasized renewal, purification, and offerings to secure Khonshu’s favor and protection through the coming month.
                 </p>
               </li>
               <li>
                 <p>
-                  <span class="bold-chandra">Ritual #2:</span>
-                  Ritual 2 will go here.
-                </p>
+                  <span class="bold-chandra">Processions and Statues:</span>During festivals, his sacred barque (boat shrine) would be carried in processions under the night sky, symbolizing his journey across the heavens. These events often included music, chanting, incense burning, and dancing.</p>
               </li>
               <li>
                 <p>
-                  <span class="bold-chandra">Worship #3:</span>
-                  Maybe worship practices.
+                  <span class="bold-chandra">Daily Temple Rites:</span>
+                  Priests conducted daily offerings, including food, drink, incense, and sacred oils. Rituals included purification of the statue, dressing it, and reciting hymns and prayers.
                 </p>
               </li>
             </ul>
           </div>
           <p>
-            He is also honored at temples like the Somnath Temple in Gujarat, where Lord Shiva wears Chandra on his matted hair as a crescent, symbolizing divine protection and renewal.
+            Individuals prayed to Khonshu for good health, protection during travel, and relief from illness. Amulets and inscriptions with his name or image were used for warding off evil spirits and ensuring safe journeys at night.
           </p>
         </div>
       </div>
@@ -179,27 +171,21 @@
         <div class="text-chandra">
           <h3>Temples</h3>
           <p>
-            Though not as prominently worshipped as deities like Shiva or
-              Vishnu, Chandra has sacred associations:
+            Khonshu, though not as widely worshipped as gods like Amun or Osiris, had several important temples dedicated to him, most notably in Thebes (modern Luxor). His temples emphasized his roles as moon god, healer, and protector, and they were architecturally and ritually tied to the major religious centers of ancient Egypt.
           </p>
           <div class="list-origin-chandra">
               <ul>
                 <li>
                   <p>
-                    <span class="bold-chandra">Somnath Temple (Gujarat): </span>
-                    According to legend, Chandra was saved from Daksha’s curse
-                    by Shiva here, earning the deity the name Chandrashekhara
-                    (He who wears the moon).
+                    <span class="bold-chandra">Temple of Khonsu at Karnak: </span>
+                    This temple is located within the larger Karnak Temple Complex, south of the Temple of Amun. It was primarily built during the New Kingdom, especially under Ramesses III in the 20th Dynasty. It features a pylon entrance, open court, hypostyle hall, sanctuary, and chapels. A few other items within the walls of the temple are well-reserved reliefs and inscriptions depicting rituals and offerings to Khonshu. This is the most significant and complete temple dedicated specifically to Khonshu. The image to your right depicts this particular temple.
                   </p>
                 </li>
                 <li>
                   <p>
                     <span class="bold-chandra"
-                      >Chandrabhaga River (Himachal Pradesh):</span
-                    >
-                    Originating from the mythical site where Chandra was split
-                    by Brahma, the river symbolizes both spiritual cleansing and
-                    the harmony of masculine and feminine forces.
+                      >Temple of Khonshu at Esna:</span
+                    > This next place of worship is located in the Esna Temple complex, which is primarily devoted to Khnum. Khonshu appears in inscriptions and subsidiary chapels, often in association with lunar deities.
                   </p>
                 </li>
               </ul>
@@ -218,26 +204,25 @@
             <ul>
               <li>
                 <p>
-                  <span class="bold-chandra">Legend #1:</span>
-                  First Legend
+                  <span class="bold-chandra">The Healer:</span>
+                  A foreign ruler's daughter (possibly Nubian or Syrian) fell gravely ill. Her father prayed to Khonshu of Thebes. A statue of Khonshu was sent abroad, and upon its arrival, the girl was miraculously healed. Out of gratitude, the foreign king built a shrine to Khonshu, and the statue later returned to Thebes. This highlights Khonshu’s divine healing powers and his international reputation.
                 </p>
               </li>
               <li>
                 <p>
-                  <span class="bold-chandra">Legend #2:</span>
-                  Second Legend
+                  <span class="bold-chandra">Khonshu and the Lunar Cycle:</span>
+                  This myth is more symbolic and implicit rather than narrative. The phases of the moon were seen as Khonshu’s journey across the heavens, waning and waxing as he "travels" and "rejuvenates." The full moon symbolized that his power was at it's peak, while the new moon represents his invisibility or descent into the underworld, echoing themes of death and rebirth. THis cycle may have tied him to Osirian motifs of regeneration, though Khonshu himself was not a death god.
                 </p>
               </li>
               <li>
                 <p>
-                  <span class="bold-chandra">Legend #3:</span>
-                  Third Legend
+                  <span class="bold-chandra">Khonshu as Protector Against Evil Spirits:</span>Magical texts describe Khonshu as a defender against demons, especially those active during the night. His presence and name were invoked in amulets and spells to protect travelers at night, Ward off nightmares and diseases, and ensure safety in the lunar darkness. In some versions, he is depicted as banishing or binding malevolent spirits with his power.
                 </p>
               </li>
             </ul>
           </div>
-          <p>
-            More content
+          <p class="end">
+           As the son of Amun (creator god) and Mut (mother goddess), Khonshu completes the triad as the youthful symbol of renewal. He represents the cyclical continuity of life, just as the moon continuously renews itself.
           </p>
         </div>
       </div>
