--- a/kuutar.html
+++ b/kuutar.html
@@ -109,8 +109,10 @@
                     golden-woven garments and some of their beauty. She says:
                   </p>
                   <p class="maiden-prayer">
-                    "Kuutar, golden mistress of the moon, Spin me a thread of
-                    gold, Weave me a shining robe So I may be fair like you."
+                    <span>"Kuutar, golden mistress of the moon,</span>
+                    <span>Spin me a thread of gold,</span>
+                    <span>Weave me a shining robe</span>
+                    <span>So I may be fair like you."</span>
                   </p>
                 </li>
               </ul>
