fixed nav and styling of my pages

--- a/comparison.html
+++ b/comparison.html
@@ -14,12 +14,13 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="lore.html">Lore</a>
+          <span class="lore-nav">Lore</span>
           <ul class="dropdown">
             <li><a href="haliya.html">Haliya</a></li>
             <li><a href="chandra.html">Chandra</a></li>
             <li><a href="kuutar.html">Kuutar</a></li>
-            <li><a href="lore.html">Khonshu</a></li>
+            <li><a href="khonshu.html">Khonshu</a></li>
+            <li><a href="bakunawa.html">Bakunawa</a></li>
           </ul>
         </li>
         <li>
@@ -51,8 +52,8 @@
       </p>
     </section>
     <section class="content-chandra">
+      <h3>Comparing the Moon Deities</h3>
       <section class="comparison-section">
-        <h3>Comparing the Moon Deities</h3>
         <table class="comparison-table">
           <thead>
             <tr>
@@ -96,42 +97,47 @@
         </table>
       </section>
 
-      <section class="fun-facts">
-        <h3>Fun Facts About the Moon Deities</h3>
-        <div class="facts-grid">
-          <div class="fact-box">
-            <h4>Haliya</h4>
-            <p>
-              Haliya wears a mask during rituals to symbolize her strength and
-              mystery. She’s one of the few known warrior goddesses in
-              Philippine mythology.
-            </p>
-          </div>
+      <section>
+        <div class="text-img-chandra">
+          <div>
+            <h3>Fun Facts About the Moon Deities</h3>
 
-          <div class="fact-box">
-            <h4>Khonshu</h4>
-            <p>
-              Khonshu’s name means “traveler” because he travels across the
-              night sky. He also plays a major role in modern Marvel comics as
-              the god behind Moon Knight!
-            </p>
-          </div>
-
-          <div class="fact-box">
-            <h4>Kuutar</h4>
-            <p>
-              Kuutar is known as the “Lady of the Moon” in Finnish poetry. She’s
-              often described weaving shimmering silver cloth from moonlight.
-            </p>
-          </div>
-
-          <div class="fact-box">
-            <h4>Chandra</h4>
-            <p>
-              Chandra rides a chariot drawn by ten white horses or an antelope.
-              His phases are used to determine traditional Hindu calendars and
-              festivals.
-            </p>
+            <div class="list-origin-chandra">
+              <ul>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Haliya:</span> Haliya wears a
+                    mask during rituals to symbolize her strength and mystery.
+                    She’s one of the few known warrior goddesses in Philippine
+                    mythology.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Khonshu: </span>
+                    Khonshu’s name means “traveler” because he travels across
+                    the night sky. He also plays a major role in modern Marvel
+                    comics as the god behind Moon Knight!
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Kuutar: </span>
+                    Kuutar is known as the “Lady of the Moon” in Finnish poetry.
+                    She’s often described weaving shimmering silver cloth from
+                    moonlight.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Chandra: </span>
+                    Chandra rides a chariot drawn by ten white horses or an
+                    antelope. His phases are used to determine traditional Hindu
+                    calendars and festivals.
+                  </p>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
