--- a/khonshu.html
+++ b/khonshu.html
@@ -14,14 +14,14 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="lore.html">Lore</a>
+          <span class="lore-nav">Lore</span>
           <ul class="dropdown">
             <li><a href="haliya.html">Haliya</a></li>
             <li><a href="chandra.html">Chandra</a></li>
             <li><a href="kuutar.html">Kuutar</a></li>
-            <li><a href="lore.html">Khonshu</a></li>
+            <li><a href="khonshu.html">Khonshu</a></li>
+            <li><a href="bakunawa.html">Bakunawa</a></li>
           </ul>
-        </li>
         </li>
         <li>
           <a href="comparison.html">Comparing & Contrasting</a>
